--- a/practica1/clientes.html
+++ b/practica1/clientes.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Clientes - Agencia de Viajes Express</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
-<!-- Navbar -->
+<!-- Navbar: barra de navegación superior -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">Agencia de Viajes Express</a>
@@ -28,9 +28,11 @@
   </div>
 </nav>
 
-<!-- Tabla de clientes -->
+<!-- Sección de la tabla de clientes -->
 <div class="container mt-4">
   <h2 class="text-center">Lista de Clientes Registrados</h2>
+  
+  <!-- Tabla de clientes -->
   <table class="table table-striped mt-3">
     <thead class="table-dark">
       <tr>
@@ -43,11 +45,14 @@
       </tr>
     </thead>
     <tbody id="tablaClientes">
-      <!-- Aquí se insertarán los clientes -->
+      <!-- Filas de la tabla cargadas dinámicamente con JavaScript -->
     </tbody>
   </table>
+   <!-- Botón para exportar la tabla a TXT -->
+  <button class="btn btn-success" id="exportarTxt">Exportar a TXT</button>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/clientes.js"></script>
 </body>
 </html>
