--- a/practica1/contacto.html
+++ b/practica1/contacto.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto - Agencia de Viajes Express</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
-<!-- Navbar -->
+<!-- Navbar: barra de navegación superior -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">Agencia de Viajes Express</a>
@@ -28,26 +28,36 @@
   </div>
 </nav>
 
-<!-- Formulario de contacto -->
+<!-- Sección del formulario de contacto -->
 <div class="container mt-4">
   <h2 class="text-center">Contáctanos</h2>
+  
+  <!-- Div para mostrar alertas o mensajes de éxito/error -->
+  <div id="alertaContacto"></div>
+
+   <!-- Formulario principal -->
   <form id="formContacto" class="mt-3">
+    <!-- Campo de nombre completo -->
     <div class="mb-3">
       <label for="nombre" class="form-label">Nombre completo</label>
       <input type="text" class="form-control" id="nombre" required>
     </div>
+    <!-- Campo de correo electrónico -->
     <div class="mb-3">
       <label for="email" class="form-label">Correo electrónico</label>
       <input type="email" class="form-control" id="email" required>
     </div>
+     <!-- Campo de mensaje -->
     <div class="mb-3">
       <label for="mensaje" class="form-label">Mensaje</label>
       <textarea id="mensaje" class="form-control" rows="4" required></textarea>
     </div>
+    <!-- Botón de envío del formulario -->
     <button type="submit" class="btn btn-success">Enviar</button>
   </form>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
