--- a/practica1/index.html
+++ b/practica1/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+     <!-- Configuración de codificación y vista para dispositivos móviles -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Título de la página -->
     <title>Agencia de Viajes Express</title>
+    <!-- Bootstrap CSS desde CDN para estilos y componentes responsivos -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Hoja de estilos personalizada -->
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
-<!-- Navbar -->
+<!-- Navbar: barra de navegación superior -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
+    <!-- Logo o nombre de la agencia -->
     <a class="navbar-brand" href="index.html">Agencia de Viajes Express</a>
+    <!-- Botón para desplegar el menú en dispositivos móviles -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
       <span class="navbar-toggler-icon"></span>
     </button>
+     <!-- Menú de navegación -->
     <div class="collapse navbar-collapse" id="menu">
       <ul class="navbar-nav ms-auto">
+        <!-- Enlaces a las diferentes secciones del sitio -->
         <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
         <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
         <li class="nav-item"><a class="nav-link" href="registro.html">Registro</a></li>
@@ -28,20 +36,23 @@
   </div>
 </nav>
 
-<!-- Banner -->
+<!-- Banner principal de la página -->
 <header class="bg-image text-white text-center d-flex align-items-center" style="background-image: url('img/banner.jpg'); height: 60vh;">
   <div class="container">
+    <!-- Título principal y subtítulo -->
     <h1 class="display-4 text-black">Explora el mundo con nosotros</h1>
     <p class="lead text-black">Paquetes increíbles al mejor precio</p>
-
+    
+    <!-- Botón de acción para reservar -->
     <a href="servicios.html" class="btn btn-primary btn-lg">Reserva tu viaje ahora</a>
   </div>
 </header>
 
-<!-- Carrusel -->
+<!-- Carrusel de destinos destacados -->
 <div id="carouselDestinos" class="carousel slide mt-4 container" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
+      <!-- Primer destino (activo por defecto) -->
       <img src="img/cancun.jpg" class="d-block w-100" alt="Cancún">
     </div>
     <div class="carousel-item">
@@ -51,6 +62,7 @@
       <img src="img/NuevaYork.jpg" class="d-block w-100" alt="Nueva York">
     </div>
   </div>
+   <!-- Controles de navegación del carrusel -->
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselDestinos" data-bs-slide="prev">
     <span class="carousel-control-prev-icon"></span>
   </button>
@@ -59,12 +71,13 @@
   </button>
 </div>
 
-<!-- Sección sobre la agencia -->
+<!-- Sección "Sobre nosotros" -->
 <section class="container mt-5">
   <h2>Sobre nosotros</h2>
   <p>Somos una agencia comprometida con ofrecerte las mejores experiencias de viaje alrededor del mundo...</p>
 </section>
 
+<!-- Script de Bootstrap para componentes interactivos (como el navbar y carrusel) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
