--- a/practica1/registro.html
+++ b/practica1/registro.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registro - Agencia de Viajes Express</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
-<!-- Navbar -->
+<!-- Navbar: barra de navegación superior -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">Agencia de Viajes Express</a>
@@ -28,18 +28,22 @@
   </div>
 </nav>
 
-<!-- Formulario de registro -->
+<!-- Sección del formulario de registro -->
 <div class="container mt-4">
   <h2 class="text-center">Registro de Cliente</h2>
+  <!-- Formulario principal -->
   <form id="formRegistro" class="mt-3">
+    <!-- Campo de nombre completo -->
     <div class="mb-3">
       <label for="nombre" class="form-label">Nombre completo</label>
       <input type="text" class="form-control" id="nombre" required>
     </div>
+    <!-- Campo de correo electronico -->
     <div class="mb-3">
       <label for="email" class="form-label">Correo electrónico</label>
       <input type="email" class="form-control" id="email" required>
     </div>
+   <!-- Selección de destino de interés -->
     <div class="mb-3">
       <label for="destino" class="form-label">Destino de interés</label>
       <select id="destino" class="form-select" required>
@@ -56,22 +60,28 @@
         <option>Ruta Maya México</option>
       </select>
     </div>
+
+    <!-- Número de personas -->
     <div class="mb-3">
       <label for="personas" class="form-label">Número de personas</label>
       <input type="number" class="form-control" id="personas" required>
     </div>
+    <!-- Fecha tentativa del viaje -->
     <div class="mb-3">
       <label for="fecha" class="form-label">Fecha tentativa de viaje</label>
       <input type="date" class="form-control" id="fecha" required>
     </div>
+     <!-- Comentarios adicionales -->
     <div class="mb-3">
       <label for="comentarios" class="form-label">Comentarios adicionales</label>
       <textarea id="comentarios" class="form-control" rows="3"></textarea>
     </div>
+    <!-- Botón de envío del formulario -->
     <button type="submit" class="btn btn-primary">Registrar</button>
   </form>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
