--- a/practica1/servicios.html
+++ b/practica1/servicios.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios - Agencia de Viajes Express</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
-<!-- Navbar -->
+<!-- Navbar: barra de navegación superior -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">Agencia de Viajes Express</a>
+      <!-- Botón para desplegar el menú en dispositivos móviles -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
       <span class="navbar-toggler-icon"></span>
     </button>
+    <!-- Menú de navegación -->
     <div class="collapse navbar-collapse" id="menu">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
@@ -28,17 +30,20 @@
   </div>
 </nav>
 
-<!-- Lista de paquetes -->
+<!-- Sección de lista de paquetes -->
 <div class="container mt-4">
   <h2 class="text-center mb-4">Nuestros Paquetes de Viaje</h2>
   <div class="row">
-    <!-- Ejemplo de tarjeta -->
+    <!-- Tarjeta de ejemplo de un paquete de viaje -->
     <div class="col-md-4 mb-4">
       <div class="card">
+        <!-- Imagen del paquete -->
         <img src="img/cancun.jpg" class="card-img-top" alt="Cancún">
         <div class="card-body">
+          <!-- Título y descripción del paquete -->
           <h5 class="card-title">Cancún All-Inclusive</h5>
           <p class="card-text">5 días / 4 noches, incluye hospedaje, vuelos, transporte y más.</p>
+          <!-- Botón que abre un modal con más información -->
           <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCancun">Más información</button>
         </div>
       </div>
@@ -46,19 +51,23 @@
   </div>
 </div>
 
-<!-- Modal de ejemplo -->
+<!-- Modal: ventana emergente con detalles del paquete -->
 <div class="modal fade" id="modalCancun" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
+       <!-- Encabezado del modal -->
       <div class="modal-header">
         <h5 class="modal-title">Cancún All-Inclusive</h5>
+        <!-- Botón para cerrar el modal -->
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
+      <!-- Cuerpo del modal con detalles del paquete -->
       <div class="modal-body">
         <p>Incluye: Hospedaje, vuelos redondos, transporte, tours, comidas y bebidas ilimitadas.</p>
         <p>Precio: $15,000 MXN</p>
         <img src="img/cancun.jpg" class="img-fluid" alt="Cancún">
       </div>
+      <!-- Pie del modal con botón de cerrar -->
       <div class="modal-footer">
         <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
       </div>
