se actualizaron los archivos html ( index se agrego expansión de Sobre nosotros)  y (servicios se agrego lo que son los paquetes faltantes y sus  modales de cada paquete)

--- a/practica1/servicios.html
+++ b/practica1/servicios.html
@@ -34,46 +34,352 @@
 <div class="container mt-4">
   <h2 class="text-center mb-4">Nuestros Paquetes de Viaje</h2>
   <div class="row">
-    <!-- Tarjeta de ejemplo de un paquete de viaje -->
+    
+<!-- ====================== 1. Cancún ====================== -->
     <div class="col-md-4 mb-4">
-      <div class="card">
-        <!-- Imagen del paquete -->
+      <div class="card h-100">
         <img src="img/cancun.jpg" class="card-img-top" alt="Cancún">
         <div class="card-body">
-          <!-- Título y descripción del paquete -->
           <h5 class="card-title">Cancún All-Inclusive</h5>
-          <p class="card-text">5 días / 4 noches, incluye hospedaje, vuelos, transporte y más.</p>
-          <!-- Botón que abre un modal con más información -->
+          <p class="card-text">5 días / 4 noches, hospedaje, vuelos y más.</p>
           <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCancun">Más información</button>
         </div>
       </div>
     </div>
+
+    <!-- ====================== 2. Europa ====================== -->
+    <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <img src="img/europa.jpg" class="card-img-top" alt="Europa">
+        <div class="card-body">
+          <h5 class="card-title">Europa en 15 días</h5>
+          <p class="card-text">15 días recorriendo las principales capitales europeas.</p>
+          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalEuropa">Más información</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- ====================== 3. Nueva York ====================== -->
+    <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <img src="img/NuevaYork.jpg" class="card-img-top" alt="Nueva York">
+        <div class="card-body">
+          <h5 class="card-title">Experiencia en Nueva York</h5>
+          <p class="card-text">4 noches en la Gran Manzana, tours y espectáculos.</p>
+          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalNY">Más información</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- ====================== 4. África ====================== -->
+    <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <img src="img/africa.jpg" class="card-img-top" alt="Safari en África">
+        <div class="card-body">
+          <h5 class="card-title">Safari en África</h5>
+          <p class="card-text">7 días de aventura en reservas naturales africanas.</p>
+          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalAfrica">Más información</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- ====================== 5. Asia ====================== -->
+    <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <img src="img/asia.jpg" class="card-img-top" alt="Asia">
+        <div class="card-body">
+          <h5 class="card-title">Maravillas de Asia</h5>
+          <p class="card-text">12 días explorando templos, cultura y gastronomía.</p>
+          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalAsia">Más información</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- ====================== 6. Sudamérica ====================== -->
+    <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <img src="img/sudamerica.jpg" class="card-img-top" alt="Sudamérica">
+        <div class="card-body">
+          <h5 class="card-title">Ruta por Sudamérica</h5>
+          <p class="card-text">10 días recorriendo Brasil, Argentina y Perú.</p>
+          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalSudamerica">Más información</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- ====================== 7. Caribe ====================== -->
+    <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <img src="img/caribe.jpg" class="card-img-top" alt="Islas del Caribe">
+        <div class="card-body">
+          <h5 class="card-title">Islas del Caribe</h5>
+          <p class="card-text">Crucero de 7 noches todo incluido.</p>
+          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCaribe">Más información</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- ====================== 8. Dubái ====================== -->
+    <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <img src="img/dubai.jpg" class="card-img-top" alt="Dubái">
+        <div class="card-body">
+          <h5 class="card-title">Desierto de Dubái</h5>
+          <p class="card-text">5 días en Dubái con safari en el desierto.</p>
+          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalDubai">Más información</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- ====================== 9. Canadá ====================== -->
+    <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <img src="img/canada.jpg" class="card-img-top" alt="Canadá">
+        <div class="card-body">
+          <h5 class="card-title">Canadá y sus paisajes</h5>
+          <p class="card-text">8 días explorando montañas y lagos canadienses.</p>
+          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCanada">Más información</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- ====================== 10. Ruta Maya ====================== -->
+    <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <img src="img/maya.jpg" class="card-img-top" alt="Ruta Maya">
+        <div class="card-body">
+          <h5 class="card-title">Ruta Maya México</h5>
+          <p class="card-text">6 días recorriendo las principales zonas arqueológicas.</p>
+          <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalMaya">Más información</button>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 </div>
 
 <!-- Modal: ventana emergente con detalles del paquete -->
+<!-- Modal Cancún -->
 <div class="modal fade" id="modalCancun" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
-       <!-- Encabezado del modal -->
       <div class="modal-header">
         <h5 class="modal-title">Cancún All-Inclusive</h5>
-        <!-- Botón para cerrar el modal -->
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
-      <!-- Cuerpo del modal con detalles del paquete -->
       <div class="modal-body">
-        <p>Incluye: Hospedaje, vuelos redondos, transporte, tours, comidas y bebidas ilimitadas.</p>
-        <p>Precio: $15,000 MXN</p>
-        <img src="img/cancun.jpg" class="img-fluid" alt="Cancún">
+        <p><strong>Incluye:</strong> Hospedaje, vuelos redondos, transporte, tours, comidas y bebidas ilimitadas.</p>
+        <p><strong>Duración:</strong> 5 días / 4 noches</p>
+        <p><strong>Precio:</strong> $15,000 MXN</p>
+        <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 7 días antes del viaje. Después no es reembolsable.</p>
+        <img src="img/cancun.jpg" class="img-fluid mt-2" alt="Cancún">
       </div>
-      <!-- Pie del modal con botón de cerrar -->
       <div class="modal-footer">
         <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
       </div>
     </div>
   </div>
 </div>
+
+<!-- Modal Europa -->
+<div class="modal fade" id="modalEuropa" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Europa en 15 días</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <p><strong>Incluye:</strong> Hospedaje en hoteles 4*, vuelos internos, traslados, tours guiados y desayunos.</p>
+        <p><strong>Duración:</strong> 15 días / 14 noches</p>
+        <p><strong>Precio:</strong> $55,000 MXN</p>
+        <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 15 días antes del viaje. Después aplica cargo del 50%.</p>
+        <img src="img/europa.jpg" class="img-fluid mt-2" alt="Europa">
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Nueva York -->
+<div class="modal fade" id="modalNY" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Experiencia en Nueva York</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <p><strong>Incluye:</strong> Vuelos, hospedaje en Manhattan, entradas a museos, tour nocturno y pase al mirador del Empire State.</p>
+        <p><strong>Duración:</strong> 5 días / 4 noches</p>
+        <p><strong>Precio:</strong> $32,000 MXN</p>
+        <p><strong>Políticas de cancelación:</strong> Cancelación sin costo hasta 10 días antes del viaje.</p>
+        <img src="img/NuevaYork.jpg" class="img-fluid mt-2" alt="Nueva York">
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal África -->
+<div class="modal fade" id="modalAfrica" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Safari en África</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <p><strong>Incluye:</strong> Hospedaje en lodges, safaris diarios, transporte 4x4 y guía especializado.</p>
+        <p><strong>Duración:</strong> 7 días / 6 noches</p>
+        <p><strong>Precio:</strong> $48,000 MXN</p>
+        <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 20 días antes del viaje. Después no aplica reembolso.</p>
+        <img src="img/africa.jpg" class="img-fluid mt-2" alt="Safari África">
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Asia -->
+<div class="modal fade" id="modalAsia" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Maravillas de Asia</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <p><strong>Incluye:</strong> Hospedaje, vuelos internos, templos, visitas guiadas y gastronomía típica.</p>
+        <p><strong>Duración:</strong> 12 días / 11 noches</p>
+        <p><strong>Precio:</strong> $45,000 MXN</p>
+        <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 12 días antes del viaje.</p>
+        <img src="img/asia.jpg" class="img-fluid mt-2" alt="Asia">
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Sudamérica -->
+<div class="modal fade" id="modalSudamerica" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Ruta por Sudamérica</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <p><strong>Incluye:</strong> Hospedaje, vuelos, tours en Río, Machu Picchu y Buenos Aires.</p>
+        <p><strong>Duración:</strong> 10 días / 9 noches</p>
+        <p><strong>Precio:</strong> $38,000 MXN</p>
+        <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 14 días antes del viaje.</p>
+        <img src="img/sudamerica.jpg" class="img-fluid mt-2" alt="Sudamérica">
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Caribe -->
+<div class="modal fade" id="modalCaribe" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Islas del Caribe</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <p><strong>Incluye:</strong> Crucero todo incluido, bebidas ilimitadas y shows nocturnos.</p>
+        <p><strong>Duración:</strong> 7 noches</p>
+        <p><strong>Precio:</strong> $40,000 MXN</p>
+        <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 30 días antes de la salida.</p>
+        <img src="img/caribe.jpg" class="img-fluid mt-2" alt="Caribe">
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Dubái -->
+<div class="modal fade" id="modalDubai" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Desierto de Dubái</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <p><strong>Incluye:</strong> Hospedaje en hotel 5*, safari en el desierto, transporte y cena árabe.</p>
+        <p><strong>Duración:</strong> 5 días / 4 noches</p>
+        <p><strong>Precio:</strong> $36,000 MXN</p>
+        <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 10 días antes.</p>
+        <img src="img/dubai.jpg" class="img-fluid mt-2" alt="Dubái">
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Canadá -->
+<div class="modal fade" id="modalCanada" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Canadá y sus paisajes</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <p><strong>Incluye:</strong> Vuelos, hospedaje, tours a las Cataratas del Niágara y Montañas Rocosas.</p>
+        <p><strong>Duración:</strong> 8 días / 7 noches</p>
+        <p><strong>Precio:</strong> $42,000 MXN</p>
+        <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 15 días antes.</p>
+        <img src="img/canada.jpg" class="img-fluid mt-2" alt="Canadá">
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Ruta Maya -->
+<div class="modal fade" id="modalMaya" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Ruta Maya México</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <p><strong>Incluye:</strong> Hospedaje, transporte, entradas a zonas arqueológicas y guías.</p>
+        <p><strong>Duración:</strong> 6 días / 5 noches</p>
+        <p><strong>Precio:</strong> $25,000 MXN</p>
+        <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 7 días antes del viaje.</p>
+        <img src="img/maya.jpg" class="img-fluid mt-2" alt="Ruta Maya">
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
