--- a/practica1/index.html
+++ b/practica1/index.html
@@ -72,10 +72,52 @@
 </div>
 
 <!-- Sección "Sobre nosotros" -->
-<section class="container mt-5">
-  <h2>Sobre nosotros</h2>
-  <p>Somos una agencia comprometida con ofrecerte las mejores experiencias de viaje alrededor del mundo...</p>
+<section class="container mt-5 mb-5">
+  <h2 class="text-center mb-4">Sobre nosotros</h2>
+  <p class="text-center lead">
+    En <strong>Agencia de Viajes Express</strong> estamos comprometidos en brindarte experiencias
+    únicas alrededor del mundo, con un servicio personalizado y precios accesibles.
+  </p>
+
+  <div class="row mt-4">
+    <!-- Misión -->
+    <div class="col-md-4 text-center">
+      <div class="card shadow-sm p-3 h-100">
+        <h4 class="mb-3">Nuestra Misión</h4>
+        <p>
+          Hacer que cada viaje sea inolvidable, ofreciendo paquetes turísticos accesibles,
+          seguros y llenos de experiencias culturales que enriquezcan la vida de nuestros clientes.
+        </p>
+      </div>
+    </div>
+
+    <!-- Visión -->
+    <div class="col-md-4 text-center">
+      <div class="card shadow-sm p-3 h-100">
+        <h4 class="mb-3">Nuestra Visión</h4>
+        <p>
+          Ser la agencia de viajes líder en Latinoamérica, reconocida por la innovación en
+          nuestros servicios, la confianza de nuestros clientes y el impacto positivo en el turismo sostenible.
+        </p>
+      </div>
+    </div>
+
+    <!-- Valores -->
+    <div class="col-md-4 text-center">
+      <div class="card shadow-sm p-3 h-100">
+        <h4 class="mb-3">Nuestros Valores</h4>
+        <ul class="list-unstyled">
+          <li>✅ Compromiso</li>
+          <li>✅ Transparencia</li>
+          <li>✅ Calidad</li>
+          <li>✅ Respeto</li>
+          <li>✅ Innovación</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </section>
+
 
 <!-- Script de Bootstrap para componentes interactivos (como el navbar y carrusel) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
