--- a/practica1/contacto.html
+++ b/practica1/contacto.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto - Agencia de Viajes Express</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/estilos.css">
+    <!-- Bootstrap Icons -->
+    <l ink rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  
+    <!-- Estilos personalizados -->
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 
@@ -58,6 +62,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/script.js"></script>
+<script src="js/contacto.js"></script>
 </body>
 </html>
