--- a/practica1/registro.html
+++ b/practica1/registro.html
@@ -82,6 +82,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/script.js"></script>
+<script src="js/registro.js"></script>
 </body>
 </html>
