se agregaron las imagenes faltantes para los models en el html de servicios

--- a/practica1/contacto.html
+++ b/practica1/contacto.html
@@ -54,7 +54,7 @@
      <!-- Campo de mensaje -->
     <div class="mb-3">
       <label for="mensaje" class="form-label">Mensaje</label>
-      <textarea id="mensaje" class="form-control" rows="4" required></textarea>
+      <textarea id="mensaje" class="form-control" rows="4" ></textarea>
     </div>
     <!-- Botón de envío del formulario -->
     <button type="submit" class="btn btn-success">Enviar</button>
