--- a/practica1/index.html
+++ b/practica1/index.html
@@ -61,7 +61,13 @@
     <div class="carousel-item">
       <img src="img/NuevaYork.jpg" class="d-block w-100" alt="Nueva York">
     </div>
+    <div class="carousel-item">
+      <img src="img/ruta maya.jpeg" class="d-block w-100" alt="maya mexico">
   </div>
+  <div class="carousel-item">
+      <img src="img/islas del caribe.jpeg" class="d-block w-100" alt="Islas del Caribe">
+  </div>
+  
    <!-- Controles de navegación del carrusel -->
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselDestinos" data-bs-slide="prev">
     <span class="carousel-control-prev-icon"></span>
