--- a/practica1/servicios.html
+++ b/practica1/servicios.html
@@ -74,7 +74,7 @@
     <!-- ====================== 4. África ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/africa.jpg" class="card-img-top" alt="Safari en África">
+        <img src="img/safari africa.jpg" class="card-img-top" alt="Safari en África">
         <div class="card-body">
           <h5 class="card-title">Safari en África</h5>
           <p class="card-text">7 días de aventura en reservas naturales africanas.</p>
@@ -86,7 +86,7 @@
     <!-- ====================== 5. Asia ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/asia.jpg" class="card-img-top" alt="Asia">
+        <img src="img/maravillas de asia.jpg" class="card-img-top" alt="Asia">
         <div class="card-body">
           <h5 class="card-title">Maravillas de Asia</h5>
           <p class="card-text">12 días explorando templos, cultura y gastronomía.</p>
@@ -98,7 +98,7 @@
     <!-- ====================== 6. Sudamérica ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/sudamerica.jpg" class="card-img-top" alt="Sudamérica">
+        <img src="img/rutas por sudamerica.jpg" class="card-img-top" alt="Sudamérica">
         <div class="card-body">
           <h5 class="card-title">Ruta por Sudamérica</h5>
           <p class="card-text">10 días recorriendo Brasil, Argentina y Perú.</p>
@@ -110,7 +110,7 @@
     <!-- ====================== 7. Caribe ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/caribe.jpg" class="card-img-top" alt="Islas del Caribe">
+        <img src="img/islas del caribe.jpeg" class="card-img-top" alt="Islas del Caribe">
         <div class="card-body">
           <h5 class="card-title">Islas del Caribe</h5>
           <p class="card-text">Crucero de 7 noches todo incluido.</p>
@@ -122,7 +122,7 @@
     <!-- ====================== 8. Dubái ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/dubai.jpg" class="card-img-top" alt="Dubái">
+        <img src="img/desierto de dubai.jpeg" class="card-img-top" alt="Dubái">
         <div class="card-body">
           <h5 class="card-title">Desierto de Dubái</h5>
           <p class="card-text">5 días en Dubái con safari en el desierto.</p>
@@ -134,7 +134,7 @@
     <!-- ====================== 9. Canadá ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/canada.jpg" class="card-img-top" alt="Canadá">
+        <img src="img/canada y sus paisajes.jpg" class="card-img-top" alt="Canadá">
         <div class="card-body">
           <h5 class="card-title">Canadá y sus paisajes</h5>
           <p class="card-text">8 días explorando montañas y lagos canadienses.</p>
@@ -146,7 +146,7 @@
     <!-- ====================== 10. Ruta Maya ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/maya.jpg" class="card-img-top" alt="Ruta Maya">
+        <img src="img/ruta maya.jpeg" class="card-img-top" alt="Ruta Maya">
         <div class="card-body">
           <h5 class="card-title">Ruta Maya México</h5>
           <p class="card-text">6 días recorriendo las principales zonas arqueológicas.</p>
@@ -239,7 +239,7 @@
         <p><strong>Duración:</strong> 7 días / 6 noches</p>
         <p><strong>Precio:</strong> $48,000 MXN</p>
         <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 20 días antes del viaje. Después no aplica reembolso.</p>
-        <img src="img/africa.jpg" class="img-fluid mt-2" alt="Safari África">
+        <img src="img/safari africa.jpg" class="img-fluid mt-2" alt="Safari África">
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -261,7 +261,7 @@
         <p><strong>Duración:</strong> 12 días / 11 noches</p>
         <p><strong>Precio:</strong> $45,000 MXN</p>
         <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 12 días antes del viaje.</p>
-        <img src="img/asia.jpg" class="img-fluid mt-2" alt="Asia">
+        <img src="img/maravillas de asia.jpg" class="img-fluid mt-2" alt="Asia">
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -283,7 +283,7 @@
         <p><strong>Duración:</strong> 10 días / 9 noches</p>
         <p><strong>Precio:</strong> $38,000 MXN</p>
         <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 14 días antes del viaje.</p>
-        <img src="img/sudamerica.jpg" class="img-fluid mt-2" alt="Sudamérica">
+        <img src="img/rutas por sudamerica.jpg" class="img-fluid mt-2" alt="Sudamérica">
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -305,7 +305,7 @@
         <p><strong>Duración:</strong> 7 noches</p>
         <p><strong>Precio:</strong> $40,000 MXN</p>
         <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 30 días antes de la salida.</p>
-        <img src="img/caribe.jpg" class="img-fluid mt-2" alt="Caribe">
+        <img src="img/islas del caribe.jpeg" class="img-fluid mt-2" alt="Caribe">
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -327,7 +327,7 @@
         <p><strong>Duración:</strong> 5 días / 4 noches</p>
         <p><strong>Precio:</strong> $36,000 MXN</p>
         <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 10 días antes.</p>
-        <img src="img/dubai.jpg" class="img-fluid mt-2" alt="Dubái">
+        <img src="img/desierto de dubai.jpeg" class="img-fluid mt-2" alt="Dubái">
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -349,7 +349,7 @@
         <p><strong>Duración:</strong> 8 días / 7 noches</p>
         <p><strong>Precio:</strong> $42,000 MXN</p>
         <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 15 días antes.</p>
-        <img src="img/canada.jpg" class="img-fluid mt-2" alt="Canadá">
+        <img src="img/canada y sus paisajes.jpg" class="img-fluid mt-2" alt="Canadá">
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -371,7 +371,7 @@
         <p><strong>Duración:</strong> 6 días / 5 noches</p>
         <p><strong>Precio:</strong> $25,000 MXN</p>
         <p><strong>Políticas de cancelación:</strong> Cancelación gratuita hasta 7 días antes del viaje.</p>
-        <img src="img/maya.jpg" class="img-fluid mt-2" alt="Ruta Maya">
+        <img src="img/ruta maya.jpeg" class="img-fluid mt-2" alt="Ruta Maya">
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
