--- a/practica1/contacto.html
+++ b/practica1/contacto.html
@@ -37,7 +37,8 @@
   <h2 class="text-center">Contáctanos</h2>
   
   <!-- Div para mostrar alertas o mensajes de éxito/error -->
-  <div id="alertaContacto"></div>
+  <div id="alertaContacto" class="mt-3"></div>
+
 
    <!-- Formulario principal -->
   <form id="formContacto" class="mt-3">
@@ -60,6 +61,8 @@
     <button type="submit" class="btn btn-success">Enviar</button>
   </form>
 </div>
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/contacto.js"></script>
