se agregaron validaciones faltantes

--- a/practica1/index.html
+++ b/practica1/index.html
@@ -17,7 +17,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <!-- Logo o nombre de la agencia -->
-    <a class="navbar-brand" href="index.html">Agencia de Viajes Express</a>
+    <a class="navbar-brand" >Agencia de Viajes Express</a>
     <!-- Botón para desplegar el menú en dispositivos móviles -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
       <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,6 @@
     <!-- Título principal y subtítulo -->
     <h1 class="display-4 text-black">Explora el mundo con nosotros</h1>
     <p class="lead text-black">Paquetes increíbles al mejor precio</p>
-    
     <!-- Botón de acción para reservar -->
     <a href="servicios.html" class="btn btn-primary btn-lg">Reserva tu viaje ahora</a>
   </div>
