Se corrigieron algunos detalles y se agrego el footer a cada una de las paginas

--- a/practica1/clientes.html
+++ b/practica1/clientes.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="img/yoshi.ico">
   <title>Clientes - Agencia de Viajes Express</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/estilos.css">
@@ -49,8 +50,8 @@
       
       <!-- Filas de la tabla cargadas dinámicamente con JavaScript -->
        <tr>
-        <td>Juan Pérez</td>
-        <td>juanperez@example.com</td>
+        <td>Yael Mendez</td>
+        <td>yaelmendez@gmail.com</td>
         <td>Cancún</td>
         <td>2</td>
         <td>2023-12-01</td>
@@ -66,7 +67,98 @@
   <button class="btn btn-success" id="exportarTxt">Exportar a TXT</button>
 </div>
 
+<footer class="bg-dark text-white pt-5 pb-4 mt-5">
+    <div class="container text-center text-md-left">
+        <div class="row text-center text-md-left">
 
+            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Agencia de Viajes Express</h5>
+                <p>Comprometidos en brindarte experiencias únicas alrededor del mundo con servicio personalizado.</p>
+            </div>
+
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Servicios</h5>
+                <p>
+                    <a href="servicios.html" class="text-white footer-link">Paquetes Turísticos</a>
+                </p>
+                <p>
+                    <a href="#" class="text-white footer-link">Viajes a Medida</a>
+                </p>
+                <p>
+                    <a href="#" class="text-white footer-link">Seguro de Viaje</a>
+                </p>
+                <p>
+                    <a href="registro.html" class="text-white footer-link">Regístrate</a>
+                </p>
+            </div>
+
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Enlaces Útiles</h5>
+                <p>
+                    <a href="#" class="text-white footer-link">Tu Cuenta</a>
+                </p>
+                <p>
+                    <a href="#" class="text-white footer-link">Hazte Socio</a>
+                </p>
+                <p>
+                    <a href="servicios.html" class="text-white footer-link">Precios</a>
+                </p>
+                <p>
+                    <a href="contacto.html" class="text-white footer-link">Ayuda</a>
+                </p>
+            </div>
+
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Contacto</h5>
+                <p>
+                    <i class="fas fa-home mr-3"></i> Angelopolis, Puebla, México
+                </p>
+                <p>
+                    <i class="fas fa-envelope mr-3"></i> info@viajesexpress.com
+                </p>
+                <p>
+                    <i class="fas fa-phone mr-3"></i> +52 55 1234 5678
+                </p>
+                <p>
+                    <i class="fas fa-print mr-3"></i> +52 55 8765 4321
+                </p>
+            </div>
+        </div>
+
+        <hr class="mb-4">
+
+        <div class="row align-items-center">
+            <div class="col-md-7 col-lg-8">
+                <p class="text-center text-md-center">© 2025 Todos los derechos reservados por:
+                    <a href="#" class="text-warning footer-link-brand">
+                        <strong class="text-warning">Agencia de Viajes Express</strong>
+                    </a>
+                </p>
+            </div>
+            <div class="col-md-5 col-lg-4">
+                <div class="text-center text-md-right">
+                    <ul class="list-unstyled list-inline">
+                        <li class="list-inline-item">
+                            <a href="#" class="btn-floating btn-sm text-white social-icon"><i class="fab fa-facebook-f"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" class="btn-floating btn-sm text-white social-icon"><i class="fab fa-twitter"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" class="btn-floating btn-sm text-white social-icon"><i class="fab fa-google-plus-g"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" class="btn-floating btn-sm text-white social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" class="btn-floating btn-sm text-white social-icon"><i class="fab fa-instagram"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/clientes.js"></script>
