--- a/practica1/servicios.html
+++ b/practica1/servicios.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/yoshi.ico">
     <title>Servicios - Agencia de Viajes Express</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
@@ -38,7 +39,7 @@
 <!-- ====================== 1. Cancún ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/cancun.jpg" class="card-img-top" alt="Cancún">
+        <img src="img/cancun.jpg" class="card-img-top" alt="Cancún" id="fotos">
         <div class="card-body">
           <h5 class="card-title">Cancún All-Inclusive</h5>
           <p class="card-text">5 días / 4 noches, hospedaje, vuelos y más.</p>
@@ -50,7 +51,7 @@
     <!-- ====================== 2. Europa ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/europa.jpg" class="card-img-top" alt="Europa">
+        <img src="img/europa.jpg" class="card-img-top" alt="Europa" id="fotos">
         <div class="card-body">
           <h5 class="card-title">Europa en 15 días</h5>
           <p class="card-text">15 días recorriendo las principales capitales europeas.</p>
@@ -62,7 +63,7 @@
     <!-- ====================== 3. Nueva York ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/NuevaYork.jpg" class="card-img-top" alt="Nueva York">
+        <img src="img/NuevaYork.jpg" class="card-img-top" alt="Nueva York" id="fotos">
         <div class="card-body">
           <h5 class="card-title">Experiencia en Nueva York</h5>
           <p class="card-text">4 noches en la Gran Manzana, tours y espectáculos.</p>
@@ -74,7 +75,7 @@
     <!-- ====================== 4. África ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/safari africa.jpg" class="card-img-top" alt="Safari en África">
+        <img src="img/safari africa.jpg" class="card-img-top" alt="Safari en África" id="fotos">
         <div class="card-body">
           <h5 class="card-title">Safari en África</h5>
           <p class="card-text">7 días de aventura en reservas naturales africanas.</p>
@@ -86,7 +87,7 @@
     <!-- ====================== 5. Asia ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/maravillas de asia.jpg" class="card-img-top" alt="Asia">
+        <img src="img/maravillas de asia.jpg" class="card-img-top" alt="Asia" id="fotos">
         <div class="card-body">
           <h5 class="card-title">Maravillas de Asia</h5>
           <p class="card-text">12 días explorando templos, cultura y gastronomía.</p>
@@ -98,7 +99,7 @@
     <!-- ====================== 6. Sudamérica ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/rutas por sudamerica.jpg" class="card-img-top" alt="Sudamérica">
+        <img src="img/rutas por sudamerica.jpg" class="card-img-top" alt="Sudamérica" id="fotos">
         <div class="card-body">
           <h5 class="card-title">Ruta por Sudamérica</h5>
           <p class="card-text">10 días recorriendo Brasil, Argentina y Perú.</p>
@@ -110,7 +111,7 @@
     <!-- ====================== 7. Caribe ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/islas del caribe.jpeg" class="card-img-top" alt="Islas del Caribe">
+        <img src="img/islas del caribe.jpeg" class="card-img-top" alt="Islas del Caribe" id="fotos">
         <div class="card-body">
           <h5 class="card-title">Islas del Caribe</h5>
           <p class="card-text">Crucero de 7 noches todo incluido.</p>
@@ -122,7 +123,7 @@
     <!-- ====================== 8. Dubái ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/desierto de dubai.jpeg" class="card-img-top" alt="Dubái">
+        <img src="img/desierto de dubai.jpeg" class="card-img-top" alt="Dubái" id="fotos">
         <div class="card-body">
           <h5 class="card-title">Desierto de Dubái</h5>
           <p class="card-text">5 días en Dubái con safari en el desierto.</p>
@@ -134,7 +135,7 @@
     <!-- ====================== 9. Canadá ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/canada y sus paisajes.jpg" class="card-img-top" alt="Canadá">
+        <img src="img/canada y sus paisajes.jpg" class="card-img-top" alt="Canadá" id="fotos">
         <div class="card-body">
           <h5 class="card-title">Canadá y sus paisajes</h5>
           <p class="card-text">8 días explorando montañas y lagos canadienses.</p>
@@ -146,7 +147,7 @@
     <!-- ====================== 10. Ruta Maya ====================== -->
     <div class="col-md-4 mb-4">
       <div class="card h-100">
-        <img src="img/ruta maya.jpeg" class="card-img-top" alt="Ruta Maya">
+        <img src="img/ruta maya.jpeg" class="card-img-top" alt="Ruta Maya" id="fotos">
         <div class="card-body">
           <h5 class="card-title">Ruta Maya México</h5>
           <p class="card-text">6 días recorriendo las principales zonas arqueológicas.</p>
@@ -379,6 +380,99 @@
     </div>
   </div>
 </div>
+
+<footer class="bg-dark text-white pt-5 pb-4 mt-5">
+    <div class="container text-center text-md-left">
+        <div class="row text-center text-md-left">
+
+            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Agencia de Viajes Express</h5>
+                <p>Comprometidos en brindarte experiencias únicas alrededor del mundo con servicio personalizado.</p>
+            </div>
+
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Servicios</h5>
+                <p>
+                    <a href="servicios.html" class="text-white footer-link">Paquetes Turísticos</a>
+                </p>
+                <p>
+                    <a href="#" class="text-white footer-link">Viajes a Medida</a>
+                </p>
+                <p>
+                    <a href="#" class="text-white footer-link">Seguro de Viaje</a>
+                </p>
+                <p>
+                    <a href="registro.html" class="text-white footer-link">Regístrate</a>
+                </p>
+            </div>
+
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Enlaces Útiles</h5>
+                <p>
+                    <a href="#" class="text-white footer-link">Tu Cuenta</a>
+                </p>
+                <p>
+                    <a href="#" class="text-white footer-link">Hazte Socio</a>
+                </p>
+                <p>
+                    <a href="servicios.html" class="text-white footer-link">Precios</a>
+                </p>
+                <p>
+                    <a href="contacto.html" class="text-white footer-link">Ayuda</a>
+                </p>
+            </div>
+
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Contacto</h5>
+                <p>
+                    <i class="fas fa-home mr-3"></i> Angelopolis, Puebla, México
+                </p>
+                <p>
+                    <i class="fas fa-envelope mr-3"></i> info@viajesexpress.com
+                </p>
+                <p>
+                    <i class="fas fa-phone mr-3"></i> +52 55 1234 5678
+                </p>
+                <p>
+                    <i class="fas fa-print mr-3"></i> +52 55 8765 4321
+                </p>
+            </div>
+        </div>
+
+        <hr class="mb-4">
+
+        <div class="row align-items-center">
+            <div class="col-md-7 col-lg-8">
+                <p class="text-center text-md-center">© 2025 Todos los derechos reservados por:
+                    <a href="#" class="text-warning footer-link-brand">
+                        <strong class="text-warning">Agencia de Viajes Express</strong>
+                    </a>
+                </p>
+            </div>
+            <div class="col-md-5 col-lg-4">
+                <div class="text-center text-md-right">
+                    <ul class="list-unstyled list-inline">
+                        <li class="list-inline-item">
+                            <a href="#" class="btn-floating btn-sm text-white social-icon"><i class="fab fa-facebook-f"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" class="btn-floating btn-sm text-white social-icon"><i class="fab fa-twitter"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" class="btn-floating btn-sm text-white social-icon"><i class="fab fa-google-plus-g"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" class="btn-floating btn-sm text-white social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#" class="btn-floating btn-sm text-white social-icon"><i class="fab fa-instagram"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
